force-app/main/default/objects/Flow_Test__c/Flow_Test__c.object-meta.xml
<CustomObject>
    <label>Flow Test</label>
    <nameField>
        <label>Flow Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>