force-app/main/default/objects/Flow_Test__c/fields/Flow_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Api_Name__c</fullName>
    <label>Flow Api Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>